[package]
name = "cloudflare-worker-og-image-generator"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"
resvg = "0.23.0"
liquid = "0.26.0"
tiny-skia = "0.6.5"
usvg = "0.23.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
image = { version = "0.24.1", default-features = false, features = ["gif", "avif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
strip = true
opt-level = "z"
lto = true
